<resources>
    <string name="app_name">Khaana Khazana</string>
    <string name="khana_khazana">Khana Khazana</string>
    <string name="mobile_number">Mobile Number (10 digits)</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Dont\'have an account? Sign up now</string>
    <string name="preference_file_name">Khaana Khazana Preferences</string>
    <string name="name">Name(Min 3 characters)</string>
    <string name="email">Email Address</string>
    <string name="password">Password(Min 4 character)</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="no_favorites">You do not have any favorite restaurants</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="order_history">Order History</string>
    <string name="cost_low_to_high">Cost(Low to High)</string>
    <string name="cost_high_to_low">Cost(High to Low)</string>
    <string name="your_order_has_been_successfully_placed">Your order has been placed succesfully</string>
</resources>